@@ -22,6 +22,7 @@ Fixed bugs
 - signal extreme estimations in timeSeriesEstimate() and skip pruning estimations in eventExecEstim() to avoid unstable restarting
 - fixed that variable removal in IIS cleanup tried to delete variables that were marked as not deleteable
 - fixed parallelism computation of dynamic cut selector to use Euclidean norm instead of unsupported argument
+- fixed that non-efficious cuts were not filtered out before checking dynamic parallelism in dynamic cut selector
 
 Miscellaneous
 -------------
